add CRUD CGET
